// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`works with failing JS test 1`] = `
"FAIL e2e/__fixtures__/js-failing/index.test.ts
  ✕ tsd typecheck
  ● tsd typecheck
    Parameter type 'string' is not identical to argument type 'number'.
    > 5 | expectType<string>(concat(1, 2));
        | ^
      at e2e/__fixtures__/js-failing/index.test.ts:5:1
Test Suites: 1 failed, 1 total
Tests:       1 failed, 1 passed, 2 total
Snapshots:   0 total
Time:
Ran all test suites.
"
`;

exports[`works with failing TS test 1`] = `
"FAIL e2e/__fixtures__/ts-failing/index.test.ts
  ✕ tsd typecheck
  ● tsd typecheck
    Parameter type 'string' is not identical to argument type 'Date'.
    > 5 | expectType<string>(makeDate(5, 5, 5));
        | ^
      at e2e/__fixtures__/ts-failing/index.test.ts:5:1
    Expected an error, but found none.
    > 7 | expectError(makeDate(1, 3, 6));
        | ^
      at e2e/__fixtures__/ts-failing/index.test.ts:7:1
Test Suites: 1 failed, 1 total
Tests:       2 failed, 2 passed, 4 total
Snapshots:   0 total
Time:
Ran all test suites.
"
`;
